# algorithm

./: README.md
lab1/: CMakeLists.txt  README.md  benchmark.cpp  convex_hull_solver.h  convex_hull_test.cpp  divide_convex_hull_solver.cpp  divide_convex_hull_solver.h  enumerate_convex_hull_solver.cpp  enumerate_convex_hull_solver.h  graham_convex_hull_solver.cpp  graham_convex_hull_solver.h  main.cpp
lab2/: CMakeLists.txt  README.md  main.cpp  map.cpp  map.h  visualization.cpp  visualization.h
lab2/data/: map1.txt  map2.txt
lab3/: CMakeLists.txt  README.md  benchmark.cpp  greedy_set_cover_solver.cpp  greedy_set_cover_solver.h  ilp_set_cover_solver.cpp  ilp_set_cover_solver.h  main.cpp  set_cover_solver.h
lab4/: CMakeLists.txt  README.md  benchmark.cpp  main.cpp  quicksort.cpp  quicksort.h
